--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.6",
     "@ionic/angular": "^5.5.2",
+    "chart.js": "^2.9.4",
     "firebase": "^8.2.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -35,6 +36,7 @@
     "@angular/language-service": "~11.2.0",
     "@capacitor/cli": "2.4.6",
     "@ionic/angular-toolkit": "^3.1.0",
+    "@types/chart.js": "^2.9.31",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
